<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grade"
    android:orientation="vertical"
    tools:context="com.example.android.loginusingsqlite.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="80dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo1" />

            <EditText
                android:id="@+id/usernameLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/please_enter_username"
                android:padding="6dp"
                android:textColor="#000000"
                android:textColorHint="#000000">

            </EditText>

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/please_enter_password"
                android:inputType="textPassword"
                android:padding="6dp"
                android:textColor="#000000"
                android:textColorHint="#000000">

            </EditText>

            <TextView
                android:id="@+id/warning_login_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="#ff0000"
                android:textSize="13sp"
                android:visibility="invisible"
                android:text="@string/warning_loginaccount"/>

            <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="sign_up_page"
                android:text="@string/sign_up_now"
                android:textColor="#afefef"
                android:textSize="14dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/next" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
